# grocery-butler

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Procfile  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: chief-architect.md  dependency-checker.md  documentation.md  performance.md  quality-reviewer.md  refactorer.md  security-auditor.md  test-generator.md
.github/workflows/: ci.yml  claude-code-review.yml  code-review.yml
grocery_butler/: __init__.py  __main__.py  app.py  bot.py  cart_builder.py  claude_utils.py  cli.py  config.py  consolidator.py  main.py  meal_parser.py  models.py  order_service.py  pantry_manager.py  product_search.py  product_selector.py  prompt_loader.py  recipe_store.py  safeway_client.py  safeway_pipeline.py  substitution_service.py
grocery_butler/db/: __init__.py  adapter.py  migrate.py  migrate_unit_enum.py  schema.sql  schema_pg.sql
grocery_butler/db/migrations/: 001_initial_schema.sql  002_seed_data.sql  002_seed_data_pg.sql  003_normalize_unit_enum.sql  003_normalize_unit_enum_pg.sql  __init__.py
grocery_butler/prompts/: brand_selection.txt  ingredient_consolidation.txt  inventory_intent.txt  meal_decomposition.txt  product_selection.txt  recipe_matching.txt  substitution_ranking.txt
grocery_butler/static/css/: style.css
grocery_butler/static/js/: app.js
grocery_butler/templates/: base.html  brands.html  dashboard.html  error.html  inventory.html  pantry.html  placeholder.html  preferences.html  recipe_add.html  recipe_detail.html  recipes.html  shopping_list.html
plans/: RCA_ISSUE_003.md  ROADMAP.md  mealbot-implementation-prompt.md
plans/git-issues/: 001-foundation-schema-models-config.json  002-tracer-wire-stubs-cli.json  003-prompt-templates.json  004-recipe-store.json  005-pantry-manager.json  006-meal-parser.json  007-consolidator.json  008-cli-hardening.json  009-web-dashboard-layout-inventory.json  010-web-recipes-shopping-remaining.json  011-discord-bot.json
scripts/: activate-venv.sh  check-all.sh  complexity.sh  coverage.sh  fix-all.sh  format.sh  lint.sh  mutation.sh  security.sh  test.sh  typecheck.sh
tests/: __init__.py  test_adapter.py  test_app.py  test_bot.py  test_cart_builder.py  test_claude_utils.py  test_cli.py  test_config.py  test_consolidator.py  test_db.py  test_health.py  test_main.py  test_meal_parser.py  test_migrate.py  test_migrate_unit_enum.py  test_models.py  test_order_service.py  test_pantry_manager.py  test_product_search.py  test_product_selector.py  test_prompt_loader.py  test_recipe_store.py  test_safeway_client.py  test_safeway_pipeline.py  test_substitution_service.py
